add loading text in loadandplay